--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'
+        node-version: '20'  # Changed from 18 to 20
     
-    - name: Install Supabase CLI
-      run: npm install -g supabase
+    - name: Install Supabase CLI (via curl)
+      run: |
+        curl -fsSL https://github.com/supabase/cli/releases/download/v1.9.3/supabase_linux_amd64.tar.gz | tar -xz
+        chmod +x supabase
+        sudo mv supabase /usr/local/bin/supabase
     
     - name: Link Supabase project
       run: supabase link --project-ref slfxwkvhomomdcqpkfqp
