--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,18 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20'  # Changed from 18 to 20
+        node-version: '20'
     
     - name: Install Supabase CLI (via curl)
       run: |
-        curl -fsSL https://github.com/supabase/cli/releases/download/v1.9.3/supabase_linux_amd64.tar.gz | tar -xz
-        chmod +x supabase
+        # Get the latest version
+        LATEST_VERSION=$(curl -s https://api.github.com/repos/supabase/cli/releases/latest | grep tag_name | cut -d '"' -f 4)
+        echo "Installing Supabase CLI version: $LATEST_VERSION"
+        
+        # Download and install
+        curl -fsSL "https://github.com/supabase/cli/releases/download/${LATEST_VERSION}/supabase_linux_amd64.tar.gz" | tar -xz
         sudo mv supabase /usr/local/bin/supabase
+        supabase --version
     
     - name: Link Supabase project
       run: supabase link --project-ref slfxwkvhomomdcqpkfqp
