--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,24 +18,23 @@ jobs:
       with:
         node-version: '20'
     
-    - name: Install Supabase CLI
-      run: npm install -g supabase --force
+    - name: Install Supabase CLI (via npm as dev dependency)
+      run: npm install --save-dev supabase
     
-    - name: Verify Supabase installation
-      run: supabase --version
-    
-    - name: Link Supabase project
-      run: supabase link --project-ref slfxwkvhomomdcqpkfqp
+    - name: Use npx to run Supabase commands
+      run: |
+        npx supabase --version
+        npx supabase link --project-ref slfxwkvhomomdcqpkfqp
       env:
         SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
     
     - name: Deploy Edge Functions
       run: |
-        supabase functions deploy generate-embedding --no-verify-jwt
-        supabase functions deploy select-mutation --no-verify-jwt
-        supabase functions deploy learn-from-evolution --no-verify-jwt
-        supabase functions deploy semantic-search --no-verify-jwt
-        supabase functions deploy aesthetic-predictor --no-verify-jwt
+        npx supabase functions deploy generate-embedding --no-verify-jwt
+        npx supabase functions deploy select-mutation --no-verify-jwt
+        npx supabase functions deploy learn-from-evolution --no-verify-jwt
+        npx supabase functions deploy semantic-search --no-verify-jwt
+        npx supabase functions deploy aesthetic-predictor --no-verify-jwt
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
