--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,11 @@ jobs:
       with:
         node-version: '20'
     
-    - name: Install Supabase CLI (via npm as dev dependency)
+    - name: Install Supabase CLI
       run: npm install --save-dev supabase
     
-    - name: Use npx to run Supabase commands
-      run: |
-        npx supabase --version
-        npx supabase link --project-ref slfxwkvhomomdcqpkfqp
+    - name: Link Supabase project
+      run: npx supabase link --project-ref slfxwkvhomomdcqpkfqp
       env:
         SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
     
@@ -36,6 +34,7 @@ jobs:
         npx supabase functions deploy semantic-search --no-verify-jwt
         npx supabase functions deploy aesthetic-predictor --no-verify-jwt
       env:
+        SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
         SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
